tests/interp/bad/exists-5.ngc
(Named parameter not terminated)
G0 X EXISTS[#<foo]
M2
